<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".DetalhesFilme"
    tools:ignore="Overdraw">


        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/filmeThumbnail"
            android:layout_width="170dp"
            android:layout_height="250dp"
            android:contentDescription="@string/description_poster"
            android:scaleType="centerCrop"
            android:paddingTop="5dp"
            android:paddingLeft="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:gravity="start"
            >

            <TextView
                android:id="@+id/tv_nome_filme_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/oxygen_bold"
                android:text="@string/titleTXT"
                android:textColor="@color/mainTextColor"
                android:textSize="22sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/oxygen"
                android:text="@string/releaseDateTXT"
                android:textColor="@color/mainTextColor"
                android:textSize="18sp"
                android:typeface="serif" />

            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_star_black_24dp"
                android:fontFamily="@font/oxygen"
                android:text="@string/ratingTXT"
                android:textColor="@color/mainTextColor"
                android:textSize="20sp"
                android:typeface="serif" />

                <Button
                android:id="@+id/btn_add_favorite"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="Add Favorite" />


        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_plot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/oxygen"
        android:maxLines="10"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:text="@string/plotTXT"
        android:textColor="@color/mainTextColor"
        android:textSize="17sp"
         />

    <View
        android:layout_marginTop="3dp"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/mainTextColor"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/oxygen_bold"
        android:gravity="center_horizontal"
        android:text="Trailers"
        android:textColor="@color/mainTextColor"
        android:textSize="25sp"
        android:layout_marginBottom="3dp"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/mainTextColor"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView_trailer_id"
        android:layout_width="match_parent"
        android:layout_height="195dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
       />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/mainTextColor"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/oxygen_bold"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:text="Reviews"
        android:textColor="@color/mainTextColor"
        android:textSize="25sp"
        android:layout_marginBottom="3dp"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/mainTextColor"/>


    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:id="@+id/recyclerView_review_id"/>




</LinearLayout>
</ScrollView>